tests/pass/parse/integers/i64/max_fail.leo
function main() {
    let a: i64 = 9223372036854775808;
}