tests/fail/parse/syntax/address_fail.leo
function main() {
    let address = 0u32;
}